--- a/views/admin/add-products.hbs
+++ b/views/admin/add-products.hbs
@@ -62,7 +62,7 @@
             return false
         }
         if (!name.match(/^[a-z A-Z]*$/)) {
-            errorName.innerHTML = 'Number are not allowed'
+            errorName.innerHTML = 'alhpabets are only allowed'
             return false
         }
         errorName.innerHTML = null
@@ -82,7 +82,7 @@
 
         }
          if (!price.match(/^[0-9]*$/)) {
-            priceerr.innerHTML = 'Number are not allowed'
+            priceerr.innerHTML = 'Number are only allowed'
             return false
         }
       
