--- a/views/admin/admin-home.hbs
+++ b/views/admin/admin-home.hbs
@@ -4,10 +4,29 @@
     <img src="/images/istockphoto-1314651804-170667a.jpg" style="width: 100%;" alt="">
 </div>
 <div>
-    <a href="admin/all-user"> All users</a>
-   <a href="admin/view-catagory"> view catagory</a>
-   <a href="admin/add-product"> add product</a>
-   <a href="admin/view-product"> view product</a>
+    <ul>
+        <li>
+    <a href="admin/all-user"> <button class="btn btn-primary">All users</button></a>
+    </li>
+    <li>
+<a href="admin/view-catagory"> <button class="btn btn-primary">Category</button></a>
+    </li>
+   <li>
+ <a href="admin/add-product"> <button class="btn btn-primary">Add product</button></a>
+   </li>
+   <li>
+ <a href="admin/view-product"> <button class="btn btn-primary">view product</button> </a>
+   </li>
+  
+   
+   </ul>
 </div>
 </div>
 </section>
+
+<style>
+    li{
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+</style>
