--- a/views/users/product-view.hbs
+++ b/views/users/product-view.hbs
@@ -1,16 +1,16 @@
-{{#if product}}
 <div class="container mt-5 mb-5">
     <div class="card">
         <div class="row g-0">
             <div class="col-md-6 border-end">
                 <div class="d-flex flex-column justify-content-center">
-                    <div  class="big_img"> <img class="big_img" src="/product-images/{{this.[0]}}"
+                    <div  class="big_img"> <img class="big_img" src="/product-images/{{a.images.[0]}}"
                             width="350"> </div>
                     <div class="thumbnail_images">
                         <ul id="thumbnail">
-                            {{#each images}}
-                            <li><img class="samll_img" src="/product-images/{{this.[0]}}" alt="" style="width:60px;height: 60px;"> </li>
+                            {{#each a.images}}
+                            <li><img class="samll_img"  src="/product-images/{{this}}" alt="" style="width:60px;height: 60px;"> </li>
                             {{/each}}
+                        
                         </ul>
                     </div>
                 </div>
@@ -18,12 +18,12 @@
             <div class="col-md-6">
                 <div class="p-3 right-side">
                     <div class="d-flex justify-content-between align-items-center">
-                        <h3>{{this.Name}}</h3> <span class="heart"><i class='bx bx-heart'></i></span>
+                        <h3>{{a.Name}}</h3> <span class="heart"><i class='bx bx-heart'></i></span>
                     </div>
                     <div class="mt-2 pr-3 content">
-                        <p>{{this.Description}}</p>
+                        <p>{{a.Description}}</p>
                     </div>
-                    <h3>${{thsi.Price}}</h3>
+                    <h3>$ {{a.Price}}</h3>
                     <div class="ratings d-flex flex-row align-items-center">
                         <div class="d-flex flex-row"> <i class='bx bxs-star'></i> <i class='bx bxs-star'></i> <i
                                 class='bx bxs-star'></i> <i class='bx bxs-star'></i> <i class='bx bx-star'></i> </div>
@@ -40,17 +40,20 @@
                             </ul>
                         </div>
                     </div> --}}
+                    <div class="mt-5 pt-5">
                     <div class="buttons d-flex flex-row mt-5 gap-3"> <button class="btn btn-outline-dark">Buy
                             Now</button> <button class="btn btn-dark">Add to Basket</button> </div>
-                    <div class="search-option"> <i class='bx bx-search-alt-2 first-search'></i>
+                            </div>
+
+                    {{!-- <div class="search-option"> <i class='bx bx-search-alt-2 first-search'></i>
                         <div class="inputs"> <input type="text" name=""> </div> <i class='bx bx-share-alt share'></i>
-                    </div>
+                    </div> --}}
                 </div>
             </div>
         </div>
     </div>
 </div>
-{{/if}}
+
 <style>
     body {
         background-color: #ecedee
