--- a/views/admin/add-products.hbs
+++ b/views/admin/add-products.hbs
@@ -1,9 +1,10 @@
-<section>
-    <div class="container">
+<section class="d-flex justify-content-center">
+    <div class=" container m-5 d-flex justify-content-center" style="background-color:rgb(255, 255, 255) ; width: 500px;height: auto;border-radius: 25px;box-shadow: 100px;">
+  <div class=" mt-5 "  ">
         <div class="row">
 
 
-            <div class="col-md-6">
+            <div class="col-md-12">
                 <form action="add-product" method="post" enctype="multipart/form-data">
                     <label for="">Name</label> <span id="nameerr" class="text-danger"></span>
                     <input type="text" name="Name" class="form-control" id="Name">
@@ -38,7 +39,7 @@
                     {{!-- <label for="">Image</label>
                     <input type="file" name="Image2" class="form-control mb-2" id="img2"> --}}
 
-                    <button type="submit" class="btn btn-success mt 4" onclick="return validation()">Submit</button>
+                    <button type="submit" class="btn btn-success mt-4 mb-4" onclick="return validation()">Submit</button>
                     {{#if imgErr}}
                     <p class="text-danger">{{imgErr}}</p>
                     {{/if}}
@@ -46,6 +47,9 @@
             </div>
         </div>
     </div>
+    </div>
+
+  
 </section>
 
 
@@ -110,3 +114,8 @@
         return true
     }
 </script>
+<style>
+    body{
+       
+    }
+</style>
