--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"></script>
+{{!-- <script src="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"></script> --}}
 
 
 </head>
@@ -20,7 +20,21 @@
     {{>user-header}}
     {{/if}}
 
+
+    {{#if admin}}
+    <div class="d-flex">
+        <div class="col-2">
+            {{>side-nav}}
+        </div>
+        <div class="col-10">
+             {{{body}}}
+        </div>
+
+    </div>
+    {{else}}
     {{{body}}}
+
+    {{/if}}
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
