--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -27,6 +27,9 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/products">Products</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/cart">Cart <span class="badge badge-dark text-dark" id="cart-count">{{cartCOunt}}</span></a>
+        </li>
         {{!-- <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
