--- a/views/users/catagory-based-products.hbs
+++ b/views/users/catagory-based-products.hbs
@@ -1,5 +1,26 @@
 <section class="section-products">
-    <div class="container">
+    <div class="col-3 ps-5">
+        <h1>filter</h1>
+<form action="/products" method="post">
+     <input class="form-check-input" type="radio" name="category" id="flexRadioDefault1" value="MEN">
+  <label class="form-check-label" for="flexRadioDefault1">
+MEN
+  </label> <br>
+   <input class="form-check-input" type="radio" name="category" id="flexRadioDefault1" value="WOMEN">
+  <label class="form-check-label" for="flexRadioDefault1">
+WOMEN
+  </label><br>
+   <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value="KIDS">
+  <label class="form-check-label" for="flexRadioDefault1">
+KIDS
+  </label><br>
+  <button class="btn btn-primary" type="submit"> Apply</button>
+
+
+
+</form>
+    </div>
+    <div class="container col-9">
         <div class="row justify-content-center text-center">
             <div class="col-md-8 col-lg-6">
                 <div class="header">
@@ -12,7 +33,7 @@
             {{#each product}}
             <!-- Single Product -->
             
-            <div class="col-md-6 col-lg-4 col-xl-3">
+            <div class="col-md-6 col-lg-4 col-xl-3 mb-5">
               <a href="/view-products/{{this._id}}">  <div id="product-1" class="single-product">
                     <div class="part-1" >
 
@@ -42,6 +63,9 @@
                         <h4 class="product-price">{{this.Price}}</h4>
                     </div>
                 </div></a>
+                <div>
+                    <button class="btn btn-success" onclick="addToCart('{{this._id}}')"> Add to Cart</button>
+                </div>
             </div>
 
             {{/each}}
@@ -211,3 +235,21 @@
         transform: translateY(-50%);
     }
 </style>
+
+
+<script>
+    function addToCart(id){
+        $.ajax({
+            url:'/add-to-cart/'+id,
+            method:'get',
+            success:(response)=>{
+               
+                if(response.status){
+                    let count=$('#cart-count').html()
+                    count=parseInt(count)+1
+                    $("#cart-count").html(count)
+                }
+            }
+        })
+    }
+</script>
