--- a/views/users/check-out.hbs
+++ b/views/users/check-out.hbs
@@ -11,7 +11,7 @@
                     <div class="card-header py-3">
                         <h5 class="mb-0 text-font text-uppercase">Delivery address</h5>
                     </div>
-                    <div class="card-body"> 
+                    <div class="card-body">
                         <form id="checkOutForm" action="/place-order" method="post">
                             <div class="inside">
                                 <div>
@@ -20,7 +20,7 @@
                                         <div class="col">
                                             <div class="form-outline">
                                                 <input type="text" id="form11Example1" class="form-control"
-                                                    name="userId" value="{{user._id}}" hidden/>
+                                                    name="userId" value="{{user._id}}" hidden />
                                                 <input type="text" id="form11Example1" class="form-control"
                                                     name="firstname" />
                                                 <label class="form-label" for="form11Example1">First name</label>
@@ -75,7 +75,8 @@
                                             Create an account?
                                         </label>
                                     </div> --}}
-                                    <input type="text" id="form11Example4" class="form-control" name="userid" value="{{user._id}}" hidden/>
+                                    <input type="text" id="form11Example4" class="form-control" name="userid"
+                                        value="{{user._id}}" hidden />
                                 </div>
                                 <div>
                                 </div>
@@ -129,8 +130,9 @@
                                                 <input class="form-check-input" type="radio" name="paymentmethod"
                                                     value="ONLINE" id="flexRadioDefault1">
                                                 <label class="form-check-label" for="flexRadioDefault1">
-                                                    Online Payment
+                                                    Rozerpay
                                                 </label>
+                                                
                                             </div>
                                         </div>
                                     </div>
