--- a/views/users/saved-address.hbs
+++ b/views/users/saved-address.hbs
@@ -13,7 +13,7 @@
                         <h5 class="mb-0 text-font text-uppercase">Delivery address</h5>
                     </div>
                     <div class="card-body">
-                        <form id="checkOutForm">
+                        <form id="checkOutForm" method="post">
                             <div class="inside">
                                 <div class="container" style="max-width: 800px;">
                                     {{#each address}}
@@ -93,6 +93,11 @@
                                                     value="ONLINE" id="flexRadioDefault1">
                                                 <label class="form-check-label" for="flexRadioDefault1">
                                                     Online Payment
+                                                </label>
+                                                <input class="form-check-input" type="radio" name="paymentmethod"
+                                                    value="PAYPAL" id="flexRadioDefault1">
+                                                <label class="form-check-label" for="flexRadioDefault1">
+                                                    Paypal
                                                 </label>
                                             </div>
                                         </div>
@@ -187,7 +192,7 @@
 
     $("#checkOutForm").submit((e) => {
         e.preventDefault()
-     
+
         $.ajax({
             url: '/saved-address',
             method: 'post',
@@ -195,14 +200,19 @@
             success: (response) => {
                 if (response.codStatus) {
                     location.href = '/'
-                } else {
+                } else if (response.paypal) {
+                    console.log(response.data)
+                    paypal(response.data)
+
+                }
+                else {
                     razorpayPayment(response)
-                    
+
 
 
                 }
 
-               
+
             }
         })
     })
@@ -219,8 +229,8 @@
             "image": "https://example.com/your_logo",
             "order_id": order.id, //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
             "handler": function (response) {
-             
-                verifyPayment(response,order)
+
+                verifyPayment(response, order)
             },
             "prefill": {
                 "name": "Gaurav Kumar",
@@ -235,24 +245,31 @@
             }
         };
         var rzp1 = new Razorpay(options);
-           rzp1.open();
+        rzp1.open();
     }
-    function verifyPayment(payment,order){
+    function verifyPayment(payment, order) {
         $.ajax({
-            url:'/verify-payment',
-            data:{
+            url: '/verify-payment',
+            data: {
                 payment,
                 order
             },
-            method:'post',
-            success:(response)=>{
-                if(response.status){
+            method: 'post',
+            success: (response) => {
+                if (response.status) {
                     alert('payment success')
-                }else{
+                } else {
                     alert('failed')
                 }
             }
         })
 
+    }
+    function paypal(data) {
+        for (let i = 0; i < data.links.length; i++) {
+            if (data.links[i].rel === 'approval_url') {
+             window.location.href=(data.links[i].href);
+            }
+        }
     }
 </script>
