--- a/views/users/catagory-based-products.hbs
+++ b/views/users/catagory-based-products.hbs
@@ -29,11 +29,11 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row ">
             {{#each product}}
             <!-- Single Product -->
 
-            <div class="col-md-6 col-lg-4 col-xl-3 mb-5">
+            <div class="col-md-6 col-lg-4 col-xl-3 mb-5 m-2" id="card">
                 <a href="/view-products/{{this._id}}">
                     <div id="product-1" class="single-product">
                         <div class="part-1">
@@ -41,7 +41,7 @@
 
 
                             <img src="/product-images/{{this.images.[0]}}" alt="" style="width: 100%; height: 100%;"
-                                class="part-1 ">
+                                class="part-1 p-3">
 
                             <ul>
                                 <li><a href="#"><i class="fas fa-shopping-cart"> <img
@@ -59,16 +59,15 @@
 
 
                         </div>
-                        <div class="part-2">
+                        <div class="part-2 ms-3">
                             <h3 class="product-title">{{this.Name}}</h3>
 
                             <h4 class="product-price text-success">RS:{{this.Price}}</h4>
                         </div>
+                        <button class="btn btn-success ms-3 " onclick="addToCart('{{this._id}}')"> Add to Cart</button>
                     </div>
                 </a>
-                <div>
-                    <button class="btn btn-success" onclick="addToCart('{{this._id}}')"> Add to Cart</button>
-                </div>
+
             </div>
 
             {{/each}}
@@ -85,9 +84,14 @@
     body {
         font-family: "Poppins", sans-serif;
         color: #444444;
+
     }
 
-    a,
+    .row {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 
     .section-products #product-1 .part-1::before {
         background: url() no-repeat center;
@@ -244,11 +248,21 @@
         background-color: #444444;
         transform: translateY(-50%);
     }
+
+    #card {
+        background: rgba(255, 255, 255, 0.3);
+        box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+        backdrop-filter: blur(20px);
+        -webkit-backdrop-filter: blur(20px);
+        border-radius: 10px;
+        border: 1px solid rgba(255, 255, 255, 0.18);
+    }
 </style>
 
 
 <script>
     function addToCart(id) {
+        alert(id)
         $.ajax({
             url: '/add-to-cart/' + id,
             method: 'get',
