--- a/views/users/order-list.hbs
+++ b/views/users/order-list.hbs
@@ -1,146 +1,98 @@
-<section class="vh-100 gradient-custom-2">
-  <div class="container h-100">
-    <div class="row d-flex justify-content-center pt-5 h-100">
-      <div class="col-md-10 col-lg-8 col-xl-6">
-         {{#each order}}
-        <div class="card card-stepper mb-5" style="border-radius: 16px;">
-          <div class="card-header p-4">
-           
-            <div class="d-flex justify-content-between align-items-center">
-              <div>
-                <p class="text-muted mb-2"> Order ID <span class="fw-bold text-body">{{this.userId}}</span></p>
-                <p class="text-muted mb-0"> Place On <span class="fw-bold text-body">{{this.date}}</span> </p> <br>
+<section>
+  <div class="container">
 
-                <p class="text-muted mb-0 "> Name<span class="fw-bold text-body text-justify"> {{this.deliveryDetails.FirstName}}
-                    <br>
-                     <br>
-                    </span> </p>
-                     <p class="text-muted mb-0"> Mobile <span class="fw-bold text-body">{{this.deliveryDetails.mobile}}</span> </p>
-                     <p class="text-muted mb-0"> Address <span class="fw-bold text-body">{{this.deliveryDetails.address}}</span> </p>
 
-              </div>
 
-              <div>
 
-              
-              </div>
-            </div>
-          </div>
-          <div class="card-body p-4">
-            <div class="d-flex flex-row mb-4 pb-2">
-              <div class="flex-fill">
-                {{#each products}}
-                <p>items: <span>{{item}}</span> </p><span class="mb-0"><a href="/view-products/{{item}}"> View Details</a></span>
-                <hr>
-                {{/each}}
-              </div>
 
-            </div>
-           
+    {{#each order}}
+    <div class="card card-stepper mb-5" style="border-radius: 16px; width:100%" id="card">
+      <div class="card-header p-4">
+
+        <div class="d-flex justify-content-between align-items-center">
+          <div>
+            <p class="text-muted mb-2"> Order ID <span class="fw-bold text-body">{{this.userId}}</span>
+              <span class="text-muted mb-0"> Place On </span> <span class="fw-bold text-body">{{this.date}}</span>
+            </p>
+
+            <p class="text-muted mb-0 "> Name<span class="fw-bold text-body text-justify">
+                {{this.deliveryDetails.FirstName}}
+
+              </span> </p>
+            <p class="text-muted mb-0"> Mobile <span class="fw-bold text-body">{{this.deliveryDetails.mobile}}</span>
+            </p>
+            <p class="text-muted mb-0"> Address <span class="fw-bold text-body">{{this.deliveryDetails.address}}</span>
+            </p>
+
           </div>
 
+          <div>
 
 
-          <div class="card-footer p-4">
-            <div class="d-flex justify-content-between">
-              <h5 class="fw-normal mb-0">Total:Rs <span>{{this.total}}</span></h5>
-              <h5 class="fw-normal mb-0">Status: <span>{{this.status}}</span></h5>
-              <div class="border-start h-100"></div>
-              
-              <h5 class="fw-normal mb-0"><a href="#!" class="text-muted"><i class="fas fa-ellipsis-v"></i></a>
-              </h5>
-            </div>
           </div>
-       
         </div>
-           {{/each}}
       </div>
+      <div class="card-body p-4">
+        <div class="d-flex flex-row mb-4 pb-2">
+          <div class="flex-fill">
+            {{#each this.products}}
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                      Launch static backdrop modal
+                    </button>
+
+                    <!-- Modal -->
+                      <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+                        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                            <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body">
+                            <div>
+                              <img src="/product-images/{{images.[0]}}" alt="" style="width: 200px;height: 200px;">
+                            </div>
+                            <div>
+                              <P>{{this.Name}}</P>
+                              <P>{{this.Price}}</P>
+                              <P>{{../this.products.quantity}}</P>
+                            </div>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Understood</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <p>items: <span>{{item}}</span> </p><span class="mb-0"><a href="/view-products/{{item}}"> View
+                        Details</a></span>
+                    <hr>
+            {{/each}}
+          </div>
+
+        </div>
+
+      </div>
+
+
+
+      <div class="card-footer p-4">
+        <div class="d-flex justify-content-between">
+          <h5 class="fw-normal mb-0">Total:Rs <span>{{this.total}}</span></h5>
+          <h5 class="fw-normal mb-0">Status: <span>{{this.status}}</span></h5>
+          <div class="border-start h-100"></div>
+
+          <h5 class="fw-normal mb-0"><a href="#!" class="text-muted"><i class="fas fa-ellipsis-v"></i></a>
+          </h5>
+        </div>
+      </div>
+
     </div>
+    {{/each}}
+
   </div>
 </section>
-
-<style>
-  .gradient-custom-2 {
-    /* fallback for old browsers */
-
-
-  }
-
-  #progressbar-1 {
-    color: #455A64;
-  }
-
-  #progressbar-1 li {
-    list-style-type: none;
-    font-size: 13px;
-    width: 33.33%;
-    float: left;
-    position: relative;
-  }
-
-  #progressbar-1 #step1:before {
-    content: "1";
-    color: #fff;
-    width: 29px;
-    margin-left: 22px;
-    padding-left: 11px;
-  }
-
-  #progressbar-1 #step2:before {
-    content: "2";
-    color: #fff;
-    width: 29px;
-  }
-
-  #progressbar-1 #step3:before {
-    content: "3";
-    color: #fff;
-    width: 29px;
-    margin-right: 22px;
-    text-align: center;
-  }
-
-  #progressbar-1 li:before {
-    line-height: 29px;
-    display: block;
-    font-size: 12px;
-    background: #455A64;
-    border-radius: 50%;
-    margin: auto;
-  }
-
-  #progressbar-1 li:after {
-    content: '';
-    width: 121%;
-    height: 2px;
-    background: #455A64;
-    position: absolute;
-    left: 0%;
-    right: 0%;
-    top: 15px;
-    z-index: -1;
-  }
-
-  #progressbar-1 li:nth-child(2):after {
-    left: 50%
-  }
-
-  #progressbar-1 li:nth-child(1):after {
-    left: 25%;
-    width: 121%
-  }
-
-  #progressbar-1 li:nth-child(3):after {
-    left: 25%;
-    width: 50%;
-  }
-
-  #progressbar-1 li.active:before,
-  #progressbar-1 li.active:after {
-    background: #1266f1;
-  }
-
-  .card-stepper {
-    z-index: 0
-  }
-</style>
