--- a/views/admin/add-catagory.hbs
+++ b/views/admin/add-catagory.hbs
@@ -11,8 +11,8 @@
                     <span id="nameerr" class="text-danger"></span>
 
                     
-                    <label for="">Description</label> <span id="descripitonerr" class="text-danger"></span>
-                    <input type="text" name="Description" class="form-control" id="descripiton">
+                    <label for="">Offers</label> <span id="descripitonerr" class="text-danger"></span>
+                    <input type="number" name="offers" class="form-control" id="descripiton" >
 
                    
 {{!-- 
