--- a/views/admin/view-catagory.hbs
+++ b/views/admin/view-catagory.hbs
@@ -11,7 +11,7 @@
    
       <th scope="col">Id</th>
       <th scope="col">Name</th>
-      <th scope="col">Details</th>
+      <th scope="col">offers</th>
       <th scope="col">Remove</th>
       {{!-- <th scope="col">Password</th>
       <th scope="col">Status</th>
@@ -36,7 +36,8 @@
       </td> --}}
       <td>{{this._id}}</td>
       <td>{{this.Name}}</td>
-      <td>{{this.Category}}</td>
+      <td>{{this.offers}}%</td>
+      <td><a href="/admin/updateoffers/{{this.Name}}" class="btn btn-success">Update Offers</a></td>
       {{!-- <td>{{this.Password}}</td>
       <td> {{this.status}}</td> --}}
       <td>
