--- a/views/users/order-list.hbs
+++ b/views/users/order-list.hbs
@@ -33,44 +33,27 @@
         </div>
       </div>
       <div class="card-body p-4">
-        <div class="d-flex flex-row mb-4 pb-2">
-          <div class="flex-fill">
-            {{#each this.products}}
-                    <!-- Button trigger modal -->
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                      Launch static backdrop modal
-                    </button>
+        <div class="d-flex mb-4 pb-2">
+          <div class="d-flex ">
+            {{#each products}}
+            <div class="m-3">
+              <div>
+                <img src="/product-images/{{productImage.[0]}}" alt="" style="width:150px ; height: 150px;">
+              </div>
+              <P> Name:{{productName}}</P>
+              <P>Price:{{productPrice}}</P>
+              <P>qty:{{quantity}}</P>
+              <br>
 
-                    <!-- Modal -->
-                      <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-                        aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                            <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                          </div>
-                          <div class="modal-body">
-                            <div>
-                              <img src="/product-images/{{images.[0]}}" alt="" style="width: 200px;height: 200px;">
-                            </div>
-                            <div>
-                              <P>{{this.Name}}</P>
-                              <P>{{this.Price}}</P>
-                              <P>{{../this.products.quantity}}</P>
-                            </div>
-                          </div>
-                          <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Understood</button>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+              <span class="mb-0"><a href="/view-products/{{item}}"> View
+                  Details</a></span>
 
-                    <p>items: <span>{{item}}</span> </p><span class="mb-0"><a href="/view-products/{{item}}"> View
-                        Details</a></span>
-                    <hr>
+            </div>
+
+
+
+
+            <hr>
             {{/each}}
           </div>
 
@@ -84,6 +67,11 @@
         <div class="d-flex justify-content-between">
           <h5 class="fw-normal mb-0">Total:Rs <span>{{this.total}}</span></h5>
           <h5 class="fw-normal mb-0">Status: <span>{{this.status}}</span></h5>
+          {{#if_eq this.status "cancelled"}}
+          {{else}}
+          <h5 class="fw-normal mb-0">Cancel: <a class="btn text-danger" onclick="removeOrder('{{this._id}}')"><i
+                class="bi bi-x-circle"></i></a></h5>
+                {{/if_eq}}
           <div class="border-start h-100"></div>
 
           <h5 class="fw-normal mb-0"><a href="#!" class="text-muted"><i class="fas fa-ellipsis-v"></i></a>
@@ -96,3 +84,41 @@
 
   </div>
 </section>
+<script>
+
+  function removeOrder(id) {
+    alert(id)
+    Swal.fire({
+      title: 'Are you sure?',
+      text: "You won't be able to revert this!",
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Yes, delete it!'
+      }).then((result) => {
+      if (result.isConfirmed) {
+        Swal.fire(
+          'Deleted!',
+          'Your file has been deleted.',
+          'success'
+        ).then((result)=>{
+          console.log(result)
+          if(result.isConfirmed){
+              $.ajax({
+      url: '/order-remove',
+      data: {
+        id: id
+      },
+      method: "post",
+      success: (response) => {
+
+      }
+    })
+          }
+        })
+      }
+    })
+  
+  }
+</script>
