--- a/views/admin/admin-order-list.hbs
+++ b/views/admin/admin-order-list.hbs
@@ -1,38 +1,66 @@
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+
+
+
+
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+<script src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.html5.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.print.min.js"></script>
 <div class="container mt-5">
     <div class="d-flex justify-content-center row">
         <div class="col-md-10">
             <div class="rounded">
                 <div class="table-responsive table-borderless">
-                    <table class="table">
+                    <table class="table" id="example">
                         <thead>
                             <tr>
 
                                 <th>Order #</th>
                                 <th> Name</th>
+                                <th> products</th>
                                 <th>status</th>
                                 <th>Total</th>
                                 <th>Address</th>
                                 <th>Created</th>
-                                <th>Remove</th>
+                          
 
                             </tr>
                         </thead>
                         <tbody class="table-body">
                             {{#each orders}}
+                            
                             <tr class="cell-1">
+
 
                                 <td>{{@index}}</td>
                                 <td>{{deliveryDetails.FirstName}}</td>
+
+                                <td>
+                                    {{#each products}}
+                                    Name:{{this.productName}} <br>
+                                    qty:{{this.quantity}}X Price:{{this.productPrice}} <br>
+                                    <hr>
+                                    {{/each}}
+                                </td>
+
                                 <td><span>{{this.status}}</span> <span> <i class="bi bi-pencil-square btn" id="edit"
                                             onclick="editStatus('{{this._id}}')"></i> </span> </td>
                                 <td>Rs{{this.total}}</td>
                                 <td>{{deliveryDetails.address}}</td>
                                 <td>{{this.date}}</td>
-                                <td><a href="/admin/order-remove/{{this._id}}" class="btn btn-danger">Remove</a></td>
+                               
 
                             </tr>
+                        
                             {{/each}}
+                            
 
                         </tbody>
                     </table>
@@ -167,4 +195,14 @@
 
 
     }
+
+
+ $(document).ready(function() {
+    $('#example').DataTable( {
+        dom: 'Bfrtip',
+        buttons: [
+            'copy', 'csv', 'excel', 'pdf', 'print'
+        ]
+    } );
+} );
 </script>
