--- a/views/admin/view-catagory.hbs
+++ b/views/admin/view-catagory.hbs
@@ -1,11 +1,11 @@
 
 <section>
     <div class="container">
-        <div class="row mt-5">
+        <div class="row m-5">
             
           <a href="/admin/add-catagory"> <button class="btn btn-success">Add catagory</button></a>
         </div>
-        <table class="table mt-5" id="tab">
+        <table class="table m-5" id="tab">
   <thead>
     <tr>
    
