--- a/views/users/change-password.hbs
+++ b/views/users/change-password.hbs
@@ -9,15 +9,15 @@
                 </h2>
                 <p class="text-danger">{{status}}</p>
                 <form action="/change-password" method="post" style="width: 500px;">
-                    <label for="">Email</label>
-                    <input type="text" name="Email" class="form-control" value="{{user.Email}}" disabled>
+     
+                    <input type="text" name="Email" class="form-control" value="{{user.Email}}" hidden>
 
                     <label for="">Old Password</label>
                     <input type="text" name="oldpassword" class="form-control">
                     <label for="">New Password</label>
                     <input type="password" name="newpassword" class="form-control" id="newPassword">
                     <label for="">Confirm Password</label>
-                    <input type="password" name="newpassword" class="form-control" id="confirmPassword">
+                    <input type="password"  class="form-control" id="confirmPassword">
 
 
 
@@ -41,8 +41,7 @@
     function Confirm() {
         let newPassword = document.getElementById("newPassword").value
         let confirmPasswords = document.getElementById("confirmPassword").value
-        alert(newPassword)
-        alert(confirmPasswords)
+    
         if (newPassword == confirmPasswords) {
             return true
         }
