--- a/views/users/home.hbs
+++ b/views/users/home.hbs
@@ -35,17 +35,18 @@
     <div class="container"  id="image">
       
 
-   <a href="/products"> <img src="/images/boxer-Section-desktop-View.jpg" alt=""></a>
-  <a href="/products"> <img src="/images/Full-Sleeve-Section-desktop-View.jpg" alt=""></a>
-  <a href="/products"> <img src="/images/Graphic-Section-desktop-View (1).jpg" alt=""></a>
-  <a href="/products"> <img src="/images/new1-shirt-Section-desktop-View.jpg" alt=""></a>
-  <a href="/products"> <img src="/images/polo-Section-desktop-View.jpg" alt=""></a>
+   <a href="/products"> <img class="img-fluid" src="/images/boxer-Section-desktop-View.jpg" alt=""></a>
+  <a href="/products"> <img class="img-fluid" src="/images/Full-Sleeve-Section-desktop-View.jpg" alt=""></a>
+  <a href="/products"> <img  class="img-fluid"src="/images/Graphic-Section-desktop-View (1).jpg" alt=""></a>
+  <a href="/products"> <img class="img-fluid" src="/images/new1-shirt-Section-desktop-View.jpg" alt=""></a>
+  <a href="/products"> <img class="img-fluid" src="/images/polo-Section-desktop-View.jpg" alt=""></a>
 
 
     </div>
 </section>
 <style>
     #image{
+      
         display: flex;
         flex-direction: column;
         justify-content: center;
