--- a/views/admin/admin-home.hbs
+++ b/views/admin/admin-home.hbs
@@ -5,20 +5,20 @@
     </div>
     <div class="row">
         <div class="card">
-            <h5>Total Orders</h5>
+            <h5 class="mt-3">Total Orders</h5>
 
             <P class="num">{{response.totalorder}}</P>
         </div>
         <div class="card">
-            <h5>Total Sale</h5>
+            <h5 class="mt-3">Total Sale</h5>
             <P class="num">{{response.totalsale}}</P>
         </div>
         <div class="card">
-            <h5>Total Revenu</h5>
+            <h5 class="mt-3">Total Revenu</h5>
             <P class="num">{{response.totalRevenu}}</P>
         </div>
     </div>
-     <div class=" d-flex justify-content-evenly my-5" id="chartid">
+    <div class=" d-flex justify-content-evenly my-5" id="chartid">
 
 
 
@@ -46,7 +46,7 @@
         </div>
 
     </div>
-   
+
 
 </section>
 
@@ -118,7 +118,7 @@
 <span id="paymentrayzor" hidden>{{response.payment.ONLINE}}</span>
 <span id="paymentpaypal" hidden>{{response.payment.PAYPAL}}</span>
 <span id="statuscancel" hidden>{{response.status.cancelled}}</span>
-<span id="statuspending" hidden>{{response.status.pending}}</span>
+<span id="statuspending" hidden>{{response.status.Pending}}</span>
 <span id="statusplaced" hidden>{{response.status.placed}}</span>
 
 <script>
@@ -133,7 +133,7 @@
         data: {
             labels: ['pending', 'cancel', 'Placed'],
             datasets: [{
-                label: 'Order status',
+                label: "",
                 data: [pending, cancel, placed],
                 backgroundColor: [
                     'rgba(255, 99, 132, 0.2)',
@@ -154,13 +154,30 @@
                 borderWidth: 1
             }]
         },
-        options: {
-            scales: {
-                y: {
-                    beginAtZero: true
-                }
-            }
-        }
+         options: {
+                        scales: {
+
+                            y: {
+                                title: {
+                                    color: 'black',
+                                    display: true,
+                                    text: 'Numbers'
+
+                                },
+                                beginAtZero: true,
+                            },
+
+                             x: {
+                                title: {
+                                    color: 'black',
+                                    display: true,
+                                    text: 'Order Status'
+
+                                },
+                                beginAtZero: true,
+                            },
+                        },
+                    },
     });
 </script>
 <script>
@@ -184,6 +201,7 @@
 
 
             }]
+            
         },
 
     });
@@ -202,7 +220,7 @@
                 console.log(chartDatas);
                 const ctx = document.getElementById("myChart3").getContext("2d");
                 const myChart3 = new Chart(ctx, {
-                    type: "pie",
+                    type: "line",
                     data: {
                         labels: chartDatas.date,
                         datasets: [
@@ -228,7 +246,24 @@
                     },
                     options: {
                         scales: {
+
                             y: {
+                                title: {
+                                    color: 'black',
+                                    display: true,
+                                    text: 'amount'
+
+                                },
+                                beginAtZero: true,
+                            },
+
+                             x: {
+                                title: {
+                                    color: 'black',
+                                    display: true,
+                                    text: 'per day'
+
+                                },
                                 beginAtZero: true,
                             },
                         },
@@ -267,6 +302,21 @@
                     options: {
                         scales: {
                             y: {
+                               title: {
+                                    color: 'black',
+                                    display: true,
+                                    text: 'amount'
+
+                                },
+                                beginAtZero: true,
+                            },
+                            x: {
+                               title: {
+                                    color: 'black',
+                                    display: true,
+                                    text: 'month'
+
+                                },
                                 beginAtZero: true,
                             },
                         },
@@ -305,6 +355,21 @@
                     options: {
                         scales: {
                             y: {
+                              title: {
+                                    color: 'black',
+                                    display: true,
+                                    text: 'amount'
+
+                                },
+                                beginAtZero: true,
+                            },
+                            x: {
+                              title: {
+                                    color: 'black',
+                                    display: true,
+                                    text: 'year'
+
+                                },
                                 beginAtZero: true,
                             },
                         },
