--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -37,6 +37,9 @@
           <a class="nav-link active" aria-current="page" href="/order-list">orders</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/wish-list">Wish list</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/cart">Cart <span class="badge badge-dark text-dark" id="cart-count">{{cartCOunt}}</span></a>
         </li>
         {{!-- <li class="nav-item">
