--- a/views/users/order-list.hbs
+++ b/views/users/order-list.hbs
@@ -9,19 +9,24 @@
     <div class="card card-stepper mb-5" style="border-radius: 16px; width:100%" id="card">
       <div class="card-header p-4">
 
-        <div class="d-flex justify-content-between align-items-center">
-          <div>
-            <p class="text-muted mb-2"> Order ID <span class="fw-bold text-body">{{this.userId}}</span>
-              <span class="text-muted mb-0"> Place On </span> <span class="fw-bold text-body">{{this.date}}</span>
-            </p>
+        <div class="d-flex justify-content-between align-items-center" style="height: 30px;">
+          <div class="d-flex">
 
-            <p class="text-muted mb-0 "> Name<span class="fw-bold text-body text-justify">
-                {{this.deliveryDetails.FirstName}}
+            <br>
+            <div class="d-flex">
+              <p class="text-muted mb-0 "> Name<span class="fw-bold text-body text-justify">
+                  : {{this.deliveryDetails.FirstName}}
 
-              </span> </p>
-            <p class="text-muted mb-0"> Mobile <span class="fw-bold text-body">{{this.deliveryDetails.mobile}}</span>
-            </p>
-            <p class="text-muted mb-0"> Address <span class="fw-bold text-body">{{this.deliveryDetails.address}}</span>
+                </span> </p>
+              <p class="text-muted mb-0"> Mobile <span class="fw-bold text-body"> : {{this.deliveryDetails.mobile}}
+                </span>
+              </p>
+              <p class="text-muted mb-0"> Address <span class="fw-bold text-body"> : {{this.deliveryDetails.address}}
+                </span>
+              </p>
+            </div>
+            <p class="text-muted mb-2">
+              <span class="text-muted mb-0"> Place On </span> <span class="fw-bold text-body">: {{this.date}} </span>
             </p>
 
           </div>
@@ -32,7 +37,7 @@
           </div>
         </div>
       </div>
-      <div class="card-body p-4"  style="background-color:rgb(255, 255, 255); ">
+      <div class="card-body p-4" style="background-color:rgb(255, 255, 255); height: 300px; ">
         <div class="d-flex mb-4 pb-2">
           <div class="d-flex ">
             {{#each products}}
@@ -69,9 +74,17 @@
           <h5 class="fw-normal mb-0">Status: <span>{{this.status}}</span></h5>
           {{#if_eq this.status "cancelled"}}
           {{else}}
-          <h5 class="fw-normal mb-0">Cancel: <a class="btn text-danger" onclick="removeOrder('{{this._id}}','{{this.total}}')"><i
-                class="bi bi-x-circle"></i></a></h5>
-                {{/if_eq}}
+          <h5 class="fw-normal mb-0">Cancel: <a class="btn text-danger"
+              onclick="removeOrder('{{this._id}}','{{this.total}}')"><i class="bi bi-x-circle"></i></a></h5>
+          {{/if_eq}}
+
+
+
+
+
+
+
+
           <div class="border-start h-100"></div>
 
           <h5 class="fw-normal mb-0"><a href="#!" class="text-muted"><i class="fas fa-ellipsis-v"></i></a>
@@ -86,8 +99,8 @@
 </section>
 <script>
 
-  function removeOrder(id,total) {
-    alert(id)
+  function removeOrder(id, total) {
+
     Swal.fire({
       title: 'Are you sure?',
       text: "You won't be able to revert this!",
@@ -96,30 +109,30 @@
       confirmButtonColor: '#3085d6',
       cancelButtonColor: '#d33',
       confirmButtonText: 'Yes, delete it!'
-      }).then((result) => {
+    }).then((result) => {
       if (result.isConfirmed) {
         Swal.fire(
           'Deleted!',
           'Your file has been deleted.',
           'success'
-        ).then((result)=>{
+        ).then((result) => {
           console.log(result)
-          if(result.isConfirmed){
-              $.ajax({
-      url: '/order-remove',
-      data: {
-        id: id,
-        total:total
-      },
-      method: "post",
-      success: (response) => {
-        location.reload()
-      }
-    })
+          if (result.isConfirmed) {
+            $.ajax({
+              url: '/order-remove',
+              data: {
+                id: id,
+                total: total
+              },
+              method: "post",
+              success: (response) => {
+                location.reload()
+              }
+            })
           }
         })
       }
     })
-  
+
   }
 </script>
