--- a/views/users/saved-address.hbs
+++ b/views/users/saved-address.hbs
@@ -85,19 +85,21 @@
                                                 <p>Payment method</p>
 
                                                 <input class="form-check-input" type="radio" name="paymentmethod"
-                                                    value="COD" id="flexRadioDefault1">
+                                                    value="COD" id="flexRadioDefault1" onclick="selectPayment('COD')">
                                                 <label class="form-check-label" for="flexRadioDefault1">
                                                     COD
                                                 </label>
                                                 {{#if_eq total 0}}
                                                 {{else}}
                                                 <input class="form-check-input" type="radio" name="paymentmethod"
-                                                    value="ONLINE" id="flexRadioDefault1">
+                                                    value="ONLINE" id="flexRadioDefault1"
+                                                    onclick="selectPayment('ONLINE')">
                                                 <label class="form-check-label" for="flexRadioDefault1">
                                                     Online Payment
                                                 </label>
                                                 <input class="form-check-input" type="radio" name="paymentmethod"
-                                                    value="PAYPAL" id="flexRadioDefault1">
+                                                    value="PAYPAL" id="flexRadioDefault1"
+                                                    onclick="selectPayment('PAYPAL')">
                                                 <label class="form-check-label" for="flexRadioDefault1">
                                                     Paypal
                                                 </label>
@@ -109,7 +111,7 @@
 
                             </div>
 
-                            <button type="submit" class="btn button-order col-md-10">Place order</button>
+                            <button type="submit" class="btn button-order col-md-10" onclick="placeOrder()">Place order</button>
 
 
                         </form>
@@ -192,33 +194,72 @@
 
 
 <script>
+      var checkoutAddressId;
+        var PaymentMethod;
+
+        function selectAddress(id) {
+            checkoutAddressId = id;
+        }
+        function selectPayment(payment) {
+            PaymentMethod = payment;
+        }
+
+      
+
+        function placeOrder() {
 
     $("#checkOutForm").submit((e) => {
         e.preventDefault()
+            if (!checkoutAddressId && PaymentMethod) {
+                Swal.fire({
+                    icon: "error",
+                    title: "Oops...",
+                    text: "Please Select address to Place Order",
+                });
+            } else if (!PaymentMethod && checkoutAddressId) {
+                Swal.fire({
+                    icon: "error",
+                    title: "Oops...",
+                    text: "Please Select payment method to Place Order",
+                });
+            }
+            else if (!checkoutAddressId && !PaymentMethod) {
+                Swal.fire({
+                    icon: "error",
+                    title: "Oops...",
+                    text: "Please give address and payment method",
+                });
+            } else {
 
-        $.ajax({
-            url: '/saved-address',
-            method: 'post',
-            data: $('#checkOutForm').serialize(),
-            success: (response) => {
-                if (response.codStatus) {
-                    location.href = '/'
-                } else if (response.paypal) {
-                    console.log(response.data)
-                    paypal(response.data)
+                $.ajax({
+                    url: '/saved-address',
+                    method: 'post',
+                    data: $('#checkOutForm').serialize(),
+                    success: (response) => {
+                        if (response.codStatus) {
+                            location.href = '/'
+                        } else if (response.paypal) {
+                            console.log(response.data)
+                            paypal(response.data)
 
-                }
-                else {
-                    razorpayPayment(response)
+                        }
+                        else if (response.orderErr) {
+                            location.href = '/'
+
+                        }
+                        else {
+                            razorpayPayment(response)
 
 
 
-                }
+                        }
 
 
+                    }
+                })
             }
         })
-    })
+        }
 
 
     function razorpayPayment(order) {
@@ -260,10 +301,11 @@
             method: 'post',
             success: (response) => {
                 if (response.status) {
-                    alert('payment success')
-                    location.href="/"
+                  
+                    location.href = "/"
                 } else {
                     alert('failed')
+                      location.href = "/"
                 }
             }
         })
@@ -272,8 +314,9 @@
     function paypal(data) {
         for (let i = 0; i < data.links.length; i++) {
             if (data.links[i].rel === 'approval_url') {
-             window.location.href=(data.links[i].href);
+                window.location.href = (data.links[i].href);
             }
         }
     }
+    
 </script>
