--- a/views/users/wishlist.hbs
+++ b/views/users/wishlist.hbs
@@ -1,32 +1,11 @@
 <section class="section-products d-flex container">
-    <div class="  mt-3">
-        <h1>filter</h1>
-        <form action="/products" method="post">
-            <input class="form-check-input" type="radio" name="category" id="flexRadioDefault1" value="MEN">
-            <label class="form-check-label" for="flexRadioDefault1">
-                MEN
-            </label> <br>
-            <input class="form-check-input" type="radio" name="category" id="flexRadioDefault1" value="WOMEN">
-            <label class="form-check-label" for="flexRadioDefault1">
-                WOMEN
-            </label><br>
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value="KIDS">
-            <label class="form-check-label" for="flexRadioDefault1">
-                KIDS
-            </label><br>
-            <button class="btn btn-primary" type="submit"> Apply</button>
-
-
-
-        </form>
-        <a class="btn btn-success mt-2" href="/products">Reset</a>
-    </div>
+  
     <div class="container ">
         <div class="row justify-content-center text-center">
             <div class="col-md-8 col-lg-6">
                 <div class="header">
-                    <h3>Featured Product</h3>
-                    <h2>Popular Products</h2>
+                    <h2>Wish List</h2>
+              
                 </div>
             </div>
         </div>
@@ -35,24 +14,24 @@
             <!-- Single Product -->
 
             <div class="col-md-6 col-lg-4 col-xl-3 mb-5 m-2" id="card">
-                <a href="/view-products/{{this._id}}">
+                <a href="/view-products/{{this.products._id}}">
                     <div id="product-1" class="single-product">
                         <div class="part-1">
 
 
 
-                            <img src="/product-images/{{this.images.[0]}}" alt="" style="width: 100%; height: 100%;"
+                            <img src="/product-images/{{this.products.images.[0]}}" alt="" style="width: 100%; height: 100%;"
                                 class="part-1 p-3">
 
                             <ul>
                                 <li><a href="#"><i class="fas fa-shopping-cart"> <img
-                                                src="/product-images/{{this.images.[0]}}" alt=""
+                                                src="/product-images/{{this.products.images.[0]}}" alt=""
                                                 style="width: 100%; height: 100%;" class="part-1 "></i></a></li>
                                 <li><a href="#"><i class="fas fa-shopping-cart"> <img
-                                                src="/product-images/{{this.images.[1]}}" alt=""
+                                                src="/product-images/{{this.products.images.[1]}}" alt=""
                                                 style="width: 100%; height: 100%;" class="part-1 "></i></a></li>
                                 <li><a href="#"><i class="fas fa-shopping-cart"> <img
-                                                src="/product-images/{{this.images.[2]}}" alt=""
+                                                src="/product-images/{{this.products.images.[2]}}" alt=""
                                                 style="width: 100%; height: 100%;" class="part-1 "></i></a></li>
 
                             </ul>
@@ -61,17 +40,16 @@
 
                         </div>
                         <div class="part-2 ms-3">
-                            <h3 class="product-title">{{this.Name}}</h3>
+                            <h3 class="product-title">{{this.products.Name}}</h3>
 
-                            <h4 class="product-price text-success">RS:{{this.Price}}</h4>
+                            <h4 class="product-price text-success">RS:{{this.products.Price}}</h4>
 
-                            <h4 class="product-price text-danger"><s> {{this.actualPrice}} </s></h4>
+                            <h4 class="product-price text-danger"><s> {{this.products.actualPrice}} </s></h4>
                         </div>
                         <div class="d-flex">
-                            <button class="btn btn-success ms-3 " onclick="addToCart('{{this._id}}')"> Add to
+                            <button class="btn btn-success ms-3 " onclick="addToCart('{{this.products._id}}')"> Add to
                                 Cart</button>
-                            <button class="btn btn-light ms-3 text-danger" onclick="addToWishList('{{this._id}}')"> <i
-                                    class="bi bi-bookmark-heart-fill "></i></button>
+                            <button class="btn btn-light ms-3 text-danger" onclick="removeWishList('{{this.products._id}}')">Remove</button>
                         </div>
 
                     </div>
@@ -285,9 +263,9 @@
             }
         })
     }
-    function addToWishList(id) {
+    function removeWishList(id) {
         $.ajax({
-            url: '/add-wishlist',
+            url: '/remove-wishlist',
             method: 'post',
             data: {
                 id: id
@@ -297,7 +275,7 @@
                     Swal.fire({
 
                         icon: 'success',
-                        title: 'Added to Wishlist',
+                        title: 'removed',
                         showConfirmButton: false,
                         timer: 1500
                     }).then(()=>{
